--- a/BuddyBeatApp/BuddyBeat/gradle/libs.versions.toml
+++ b/BuddyBeatApp/BuddyBeat/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 accompanistPermissions = "0.30.0"
 agp = "8.3.0"
+ffmpegKitFull = "5.1"
 glide = "4.15.1"
 hiltAndroid = "2.49"
 hiltNavigationCompose = "1.2.0"
@@ -24,6 +25,7 @@ androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = 
 androidx-hilt-navigation-compose = { group = "androidx.hilt", name="hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose",version.ref = "navigationCompose" }
+ffmpeg-kit-full = { module = "com.arthenica:ffmpeg-kit-full", version.ref = "ffmpegKitFull" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroid" }
