add SensorService module to the project

--- a/BuddyBeatApp/BuddyBeat/app/src/main/AndroidManifest.xml
+++ b/BuddyBeatApp/BuddyBeat/app/src/main/AndroidManifest.xml
@@ -7,6 +7,18 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
+    <uses-permission android:name="android.permission.ACCELEROMETER"/>
+    <uses-permission android:name="android.permission.GYROSCOPE"/>
+    <uses-permission android:name="android.permission.BODY_SENSORS"/>
+    <uses-feature android:name="android.hardware.sensor.accelerometer"/>
+    <uses-feature android:name="android.hardware.sensor.gyroscope"/>
+    <uses-feature android:name="android.hardware.sensor.body_sensor"/>
+    <uses-feature android:name="android.permission.FOREGROUND_SERVICE_HEALTH"/>
+    <uses-feature android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_HEALTH" />
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
+    <uses-permission android:name="android.permission.BODY_SENSORS" />
+
 
     <application
         android:allowBackup="true"
@@ -36,6 +48,10 @@
             <intent-filter>
                 <action android:name="androidx.media3.session.MediaSessionService"/>
             </intent-filter>
+        </service>
+        <service
+            android:name=".SensorService"
+            android:foregroundServiceType="health">
         </service>
 
     </application>
