changing parameters walking and running modes

--- a/BuddyBeatApp/BuddyBeat/app/src/main/AndroidManifest.xml
+++ b/BuddyBeatApp/BuddyBeat/app/src/main/AndroidManifest.xml
@@ -56,7 +56,8 @@
         </service>
         <service
             android:name=".SensorService"
-            android:foregroundServiceType="specialUse">
+            android:foregroundServiceType="specialUse"
+            android:exported="true">
         </service>
 
     </application>
